--- a/microservices/auth-service/build.gradle
+++ b/microservices/auth-service/build.gradle
@@ -34,6 +34,8 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-config'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     implementation project(':common-libs')
+    implementation 'org.liquibase:liquibase-core'
+
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'org.postgresql:postgresql'
