--- a/microservices/config-server/src/main/resources/configurations/auth-service.yaml
+++ b/microservices/config-server/src/main/resources/configurations/auth-service.yaml
@@ -1,2 +1,17 @@
 server:
   port: 8081
+
+spring:
+  data-source:
+    url: jdbc:postgresql://localhost:5433/auth_db
+    username: postgres
+    password: postgres
+    driver-class-name: org.postgresql.Driver
+  jpa:
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+  liquibase:
+    change-log: classpath:db/changelog/db.changelog-master.yaml
+    enabled: true
+    default-schema: public
