Implement grpc in product microservice

--- a/microservices/config-server/src/main/resources/configurations/product-service.yaml
+++ b/microservices/config-server/src/main/resources/configurations/product-service.yaml
@@ -10,3 +10,8 @@ spring:
       host: localhost
       port: 27017
       authentication-database: admin
+
+grpc:
+  server:
+    port: 9050
+    reflection-service-enabled: true
