--- a/common-libs/build.gradle
+++ b/common-libs/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java-library'
+    id 'com.google.protobuf' version '0.9.4'
 }
 
 group = 'com.emercurius'
@@ -26,10 +27,48 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.30'
     annotationProcessor 'org.projectlombok:lombok:1.18.30'
 
+    compileOnly 'javax.annotation:javax.annotation-api:1.3.2'
+    annotationProcessor 'javax.annotation:javax.annotation-api:1.3.2'
+
     // Validation
     implementation 'org.springframework.boot:spring-boot-starter-validation:3.1.5'
+
+    api "io.grpc:grpc-stub:${grpcVersion}"
+    api "io.grpc:grpc-protobuf:${grpcVersion}"
+    // For Java 9+ TLS ALPN support at runtime
+    runtimeOnly "io.grpc:grpc-netty-shaded:${grpcVersion}"
+    implementation "com.google.protobuf:protobuf-java:${protobufVersion}"
+}
+
+protobuf {
+    protoc { artifact = "com.google.protobuf:protoc:${protobufVersion}" }
+    plugins {
+        grpc { artifact = "io.grpc:protoc-gen-grpc-java:${grpcVersion}" }
+    }
+    generateProtoTasks {
+        all().forEach { task ->
+            task.plugins { grpc {} }
+            task.builtins { java {} }
+        }
+    }
+}
+
+sourceSets {
+    main {
+        java {
+            srcDirs "${project.buildDir}/generated/source/proto/main/java",
+                    "${project.buildDir}/generated/source/proto/main/grpc"
+        }
+        proto {
+            srcDir 'src/main/proto'
+        }
+    }
 }
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+tasks.named('processResources') {
+    duplicatesStrategy = DuplicatesStrategy.INCLUDE
 }
