--- a/microservices/product-service/build.gradle
+++ b/microservices/product-service/build.gradle
@@ -41,6 +41,11 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation 'org.mapstruct:mapstruct:1.6.3'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
+    implementation ("net.devh:grpc-server-spring-boot-starter:${grpcStarterVersion}") {
+        exclude group: 'io.grpc', module: 'grpc-netty'
+    }
+    implementation "io.grpc:grpc-netty-shaded:${grpcVersion}"
+    testImplementation "io.grpc:grpc-testing:${grpcVersion}"
 }
 
 dependencyManagement {
