--- a/microservices/product-service/build.gradle
+++ b/microservices/product-service/build.gradle
@@ -23,10 +23,6 @@ repositories {
     mavenCentral()
 }
 
-ext {
-    set('springCloudVersion', "2025.0.0")
-}
-
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
     implementation 'org.springframework.cloud:spring-cloud-starter-config'
@@ -41,9 +37,7 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation 'org.mapstruct:mapstruct:1.6.3'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
-    implementation ("net.devh:grpc-server-spring-boot-starter:${grpcStarterVersion}") {
-        exclude group: 'io.grpc', module: 'grpc-netty'
-    }
+    implementation "net.devh:grpc-server-spring-boot-starter:${grpcStarterVersion}"
     implementation "io.grpc:grpc-netty-shaded:${grpcVersion}"
     testImplementation "io.grpc:grpc-testing:${grpcVersion}"
 }
